# cmake-demo

./: .gitignore  README.md
Example-01/: CMakeLists.txt
Example-01/src/: main.c
Example-02/: CMakeLists.txt
Example-02/src/: main.c
Example-03/: CMakeLists.txt
Example-03/src/: main.c
Example-04/: CMakeLists.txt
Example-04/src/: main.c
Example-04/src/math/: CMakeLists.txt
Example-04/src/math/include/: math.h
Example-05/: list_option.cmake  message_cmd.cmake  variable.cmake
helloworld/: CMakeLists.txt  main.c
